working on user profile page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,8 +12,8 @@
           %b.caret
         %ul.dropdown-menu
           %li
-            %i.fa.fa-info
-              %a{href: "#"}
+            = link_to profiles_path do
+              %i.fa.fa-info
               My Info
           %li
             %i.fa.fa-smile-o
