--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,4 +1,5 @@
-%body
+
+- @profiles.each do |profile|
   #page-top-outer
     #page-top
       #logo
@@ -9,66 +10,13 @@
           %tbody
             %tr
               %td
-                .whitebig User
+                .whitebig
+                  Welcome
+                  = profile.emp_name
+    = profile.emp_id
   #content-outer
     #content
       #page-heading
-      :css
-        td { font-size: 11px;height: 30 }
-        .smalltd { font-size: 11px;height: 20 }
-        .smalltd td { font-size: 11px;height: 20 }
-      :css
-        .all_users
-        {
-        	color: #666;
-        	/*line-height: 2.4em;*/
-        	line-height:18px;	
-        /*	margin: 0px;
-        	width: 350px;
-        	float:left;
-        	overflow:auto; */
-        }
-        .all_users .innertxt
-        {
-        	font-size: 0.8em;
-        	color:#666666;
-        	display:inherit;
-        	padding-bottom:25px;
-        }
-        .all_users .innertxt img
-        {
-        	float:left;
-        	border: solid 1px #cccccc;
-        	margin:5px 5px 5px 0;
-        }
-        .all_users .innertxt strong
-        {
-        	color:#666666;
-        	font-size:11px;
-        	font-weight:bold;
-        	line-height:12px;	
-        }
-        .all_users .innertxt li
-        {
-        	color:#666666;
-        	font-size:11px;
-        	font-weight:normal;
-        	/*margin:-15px 0 -15px 0;	*/
-        	text-align:left;
-        	list-style-type:none;
-        	line-height:14px;
-        }	
-        
-        .shorttext li
-        {
-        	color:#666666;
-        	font-size:11px;
-        	/*margin:-15px 0 -15px 0;	*/
-        	text-align:left;
-        	list-style-type:none;
-        }
-        .styletd
-        {height:auto !important;}
       %table#content-table{border: "0", cellpadding: "0", cellspacing: "0", width: "100%"}
         %tbody
           %tr
@@ -99,54 +47,74 @@
                                     %td{valign: "top", width: "100%"}
                                       .all_users
                                         #user1.innertxt{style: "width: 249; height: 105", userid: "1"}
-                                          %img{height: "90", src: "img805.jpg", width: "90"}/
-                                          %strong User123
+                                          = image_tag profile.image
+                                          %strong
+                                            = profile.emp_name
                                           %ul
-                                            %li User ID: IIS
-                                            %li Email: test@test.com
-                                            %li Designation: Developer
-                                            %li Department: PHP Development
+                                            %li
+                                              Emp ID
+                                              = profile.emp_id
+                                            %li
+                                              Email:
+                                              = profile.email
+                                            %li
+                                              Designation:
+                                              = profile.designation
+                                            %li
+                                              Department:
+                                              = profile.department
                                             %li
                                               DOJ:
-                                              1 Jan 2013
+                                              = profile.date_of_join
                                   %tr.alternate-row
                                     %td
                                       %p
-                                        %strong Notice Period :
-                                        30 Working Days
+                                        %strong
+                                          Notice Period :
+                                          = profile.notice_period
                                       %p
-                                        %strong Commitment Period :
-                                        24 Months, till
+                                        %strong
+                                          Commitment Period :
                                         %b
-                                          %i 1 Jan 2015
-                                      %br/
+                                          %i
+                                            = profile.commitment_period
+                                      %br
                                       %p
-                                        %strong PAN No :
-                                        AFSDG1434
+                                        %strong
+                                          PAN No :
+                                          = profile.pan_no
                                       %p
-                                        %strong PF No :
-                                        \-
+                                        %strong
+                                          PF No :
+                                          = profile.pf_no
                                       %p
-                                        %strong ESI No :
-                                        \-
+                                        %strong
+                                          ESI No :
+                                          = profile.esi_no
                                       %p
-                                        %strong Bank Account No :
-                                        2445454255524
-                                      %br/
-                                      %p Exp at DOJ:  0 Year 6 Months
+                                        %strong
+                                          Bank Account No :
+                                          = profile.bank_account
+                                      %br
                                       %p
-                                        %strong Exp in IIS :
-                                        1 Year 0 Months
+                                        Exp at DOJ:
+                                        = profile.experience_at_joining
+                                      %p
+                                        %strong
+                                          Exp in IIS :
+                                          = profile.exp_in_iis
                                       %p
                                         Total Exp(
                                         %strong> IIS EVE
                                         ) :
-                                        %b 1 Year 6 Months
+                                        %b
+                                          = profile.total_exp
                                       %br/
                                       %p
-                                        %strong> Scheduled Increment:
-                                        as per commitment/bond/cycle, Intermediate Increment can be happen anytime (if applicable):
-                                        %font{color: "red"} Nov 2014
+                                        %strong
+                                          Increment:
+                                        %font{color: "red"}
+                                          = profile.increament
                             %td{valign: "top", width: "75%"}
                               / Personal Info
                               %table#product-table{border: "0", cellpadding: "0", cellspacing: "0", width: "100%"}
